fixed missclick on mobile devices

--- a/src/components/others/themeSwitcher/ThemeSwitcher.scss
+++ b/src/components/others/themeSwitcher/ThemeSwitcher.scss
@@ -15,6 +15,7 @@ $btn-width: 90px;
     aspect-ratio: 1;
     background-color: $main-color;
     border-radius: 100%;
+    z-index: 10;
 
     &__icon {
         position: absolute;
